test/std/negative/namespace_conflict.ls
// Test: Namespace Conflict
// Layer: 2 | Category: negative | Covers: variable shadowing built-in or keyword-like names

// Use names that look like keywords but are valid variable names
let html = "conflict"
html
